# Covering_Sphere

./: .gitignore  CMakeLists.txt  README.md
include/: geomerr.h
include/R2/: circle.h  emptyset.h  intersection.h  line.h  point.h  segment.h  shape.h  vector.h
lib/: CMakeLists.txt
lib/R2/: circle.cpp  emptyset.cpp  intersection.cpp  line.cpp  point.cpp  segment.cpp  vector.cpp
